--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,10 @@ button {
     margin-top: 0;
     margin-bottom: 0;
     gap: 40px;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -162,6 +166,10 @@ button {
 
 .header-link.current {
     color: var(--hover-focus-color);
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link.current::after,
@@ -182,6 +190,10 @@ button {
     letter-spacing: 0.02em;
 
     color: var(--main-text);
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-email:hover,
@@ -257,6 +269,10 @@ button {
     border-radius: 4px;
 
     cursor: pointer;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -419,6 +435,10 @@ button {
 
     background-color: var(--acent-color);
     border-radius: 50%;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-link:hover,
@@ -498,6 +518,10 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
@@ -544,6 +568,10 @@ button {
     border: 1px solid var(--sutle-backgrounds);
     border-radius: 4px;
     padding: 12px 24px;
+
+    transition-property: color, background-color, box-shadow, border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .works-btn:hover,
@@ -567,8 +595,29 @@ button {
     width: calc((100% - 48px) / 3);
 }
 
-.card-label {
-   height: 100%;
+.card:hover .overlay {
+    transform: translateY(0);
+}
+
+.overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translateY(100%);
+
+
+    width: 100%;
+    height: 100%;
+    
+    color: var(--light-background);
+    background-color: var(--acent-color);
+
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-label {
    padding-right: 32px;
    padding-left: 32px;
    padding-top: 40px;
@@ -578,27 +627,22 @@ button {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
-   color: var(--light-background);
-   background-color: var(--acent-color);
 }
 
 
 .card-box {
     position: relative;
-}
-
-.overlay {
- position: absolute;
- width: 360px;
- height: 300px;
- left: 0;
- top: 0;
+    overflow: hidden;
 }
 
 .card-link {
     display: block;
     color: var(--header-text);
     border: 1px solid #E7E9FC;
+
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-link:hover,
@@ -672,6 +716,10 @@ button {
     border: 1px solid #8E8F99;
     border-radius: 4px;
     color: #8E8F99;
+
+    transition-property: border-color, color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -692,38 +740,70 @@ button {
     left: 0;
     right: 0;
     bottom: 0;
-    
+
     background-color: rgba(17, 19, 25, 0.2);
-    backdrop-filter: blur (6px);
+    backdrop-filter: blur(6px);
+
+    transition-property: opacity, visibility;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    transition-delay: 200ms;
 }
 
 .modal {
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
 
-    width: 408px;
-    min-height: 576px;
-    left: 516px;
-    top: 88px;
+    width: 450px;
+    min-height: 550px;
     padding: 24px;
 
     background-color: #fcfcfc;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    transition-property: transform, opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%);
+    opacity: 0;
 }
 
 .modal-btn {
-    display: block;
-    margin-left: auto;
-
+    position: absolute;
     width: 24px;
     height: 24px;
-    left: 876px;
-    top: 112px;
-
+    display: flex;
+    align-items: center;
+    top: 24px;
+    right: 24px;
+    box-sizing: border-box;
+    background-color: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
-    border: none;
-
     cursor: pointer;
 }
 
-.modal-icon {}
+.modal-btn:hover,
+.modal-btn:focus {
+    background-color: var(--hover-focus-color);
+}
+
+.modal-icon {
+    fill: var(--header-text);
+}
+
+
