--- a/css/styles.css
+++ b/css/styles.css
@@ -806,4 +806,9 @@ button {
     fill: var(--header-text);
 }
 
+.modal-btn:hover .modal-icon,
+.modal-btn:focus .modal-icon {
+    fill: var(--contrast-color-of-text);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
