--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,13 @@ button {
     letter-spacing: 0.02em;
 
     color: var(--header-text);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-link:hover,
+.header-link:focus {
+    color: var(--hover-focus-color);
 }
 
 .header-list {
@@ -139,17 +146,8 @@ button {
     margin-top: 0;
     margin-bottom: 0;
     gap: 40px;
-
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.header-link:hover,
-.header-link:focus {
-    color: var(--hover-focus-color);
-}
 
 .header-link::after {
     content: " ";
@@ -167,14 +165,10 @@ button {
 .header-link.current {
     color: var(--hover-focus-color);
 
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link.current::after,
-.header-link:hover::after,
-.header-link:focus::after {
+.header-link.current::after {
     background-color: var(--hover-focus-color);
 }
 
@@ -191,9 +185,7 @@ button {
 
     color: var(--main-text);
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-email:hover,
@@ -270,9 +262,7 @@ button {
 
     cursor: pointer;
 
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -387,7 +377,6 @@ button {
     background: #FFFFFF;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
-
 }
 
 .name-position {
@@ -415,7 +404,6 @@ button {
     text-align: center;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
-
 }
 
 /* Social icons */
@@ -436,9 +424,7 @@ button {
     background-color: var(--acent-color);
     border-radius: 50%;
 
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-link:hover,
@@ -519,9 +505,7 @@ button {
     align-items: center;
     justify-content: center;
 
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
@@ -569,9 +553,7 @@ button {
     border-radius: 4px;
     padding: 12px 24px;
 
-    transition-property: color, background-color, box-shadow, border;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .works-btn:hover,
@@ -593,6 +575,8 @@ button {
 
 .card {
     width: calc((100% - 48px) / 3);
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card:hover .overlay {
@@ -603,7 +587,7 @@ button {
     position: absolute;
     left: 0;
     top: 0;
-    transform: translateY(100%);
+    transform: translateY(101%);
 
 
     width: 100%;
@@ -612,17 +596,13 @@ button {
     color: var(--light-background);
     background-color: var(--acent-color);
 
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-label {
    padding-right: 32px;
    padding-left: 32px;
    padding-top: 40px;
-   margin-bottom: 164px;
-   font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 1.5;
@@ -640,9 +620,7 @@ button {
     color: var(--header-text);
     border: 1px solid #E7E9FC;
 
-    transition-property: box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-link:hover,
@@ -717,9 +695,7 @@ button {
     border-radius: 4px;
     color: #8E8F99;
 
-    transition-property: border-color, color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -738,19 +714,17 @@ button {
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+
+    width: 100%;
+    height: 100%;
 
     background-color: rgba(17, 19, 25, 0.2);
     backdrop-filter: blur(6px);
 
-    transition-property: opacity, visibility;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-    opacity: 0;
     visibility: hidden;
     pointer-events: none;
 
@@ -761,25 +735,21 @@ button {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 1;
+    transform: scale(1);
 
-    width: 450px;
-    min-height: 550px;
+    width: 408px;
+    min-height: 576px;
     padding: 24px;
 
     background-color: #fcfcfc;
     border-radius: 4px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
-    transition-property: transform, opacity;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%);
-    opacity: 0;
+    transform: scale(1);
 }
 
 .modal-btn {
@@ -795,6 +765,8 @@ button {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover,
