--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ button {
 
     cursor: pointer;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -735,7 +735,7 @@ button {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: scale(1);
+    transform: translate(-50%, -50%) scale(1);
 
     width: 408px;
     min-height: 576px;
@@ -749,7 +749,7 @@ button {
 }
 
 .backdrop.is-hidden .modal {
-    transform: scale(1);
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .modal-btn {
